# Turkish-Finance-LLM

./: .gitignore  LICENSE  README.md  dataset.ipynb  dataset.py  pyproject.toml
Dataset/: dataset.py
PEFT FineTune/: QLoRA_Finance_LLM.ipynb
